# OpenHarness

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: autopilot-pages.yml  autopilot-run-next.yml  autopilot-scan.yml
autopilot-dashboard/: index.html  package-lock.json  package.json  vite.config.ts
autopilot-dashboard/public/: snapshot.json
autopilot-dashboard/src/: App.tsx  index.css  types.ts
docs/autopilot/: index.html
frontend/terminal/: package-lock.json  package.json
ohmo/: __init__.py  cli.py  memory.py  prompts.py  runtime.py  session_storage.py  workspace.py
ohmo/gateway/: bridge.py  models.py  router.py  runtime.py  service.py
ohqa/: __init__.py  __main__.py  cli.py  memory.py  prompts.py  runtime.py  session_storage.py  workspace.py
ohqa/gateway/: __init__.py  bridge.py  config.py  models.py  router.py  runtime.py  service.py
scripts/: install.ps1  install.sh  install_dev.sh  test_docker_sandbox_e2e.py
src/openharness/: cli.py  platforms.py
tests/: conftest.py  test_hooks_skills_plugins_real.py  test_untested_features.py
tests/test_api/: test_client.py  test_codex_client.py  test_openai_client.py
tests/test_auth/: test_external.py
tests/test_autopilot/: test_verification.py
tests/test_channels/: test_base.py
tests/test_commands/: test_cli.py  test_command_flows.py  test_registry.py
tests/test_config/: test_output_styles_loader.py  test_settings.py
tests/test_coordinator/: test_agent_definitions.py
tests/test_engine/: test_messages.py  test_query_engine.py
tests/test_entrypoints/: test_no_stdlib_types_shadowing.py
tests/test_install/: test_windows_alias.py
tests/test_logging/: test_format_strings.py
tests/test_mcp/: test_client_errors.py  test_http_flow.py
tests/test_ohmo/: test_cli.py  test_gateway.py  test_loading.py  test_ohmo_session_storage.py
tests/test_permissions/: test_checker.py
(+153 files in other folders)
